updated gihub upload order and code :memo:

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
 
     <h1>Stage Baby, commit Baby, Push Baby</h1>
+
+    <p>git add -A</p>
+
+    <p>git commit -m ""</p>
     
+    <!-- "master" will be changed to "main" in the future -->
+    <p>git push orign master</p>
+
 </body>
 </html>
