add new p tag rule and making sure gitignore with file associated with it is not added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <!-- "master" will be changed to "main" in the future -->
     <p>git push orign master</p>
 
+    <p>Trying to update this new p tag, bit not adding the .gitignore file and text file associated to it</p>
 </body>
 </html>
